# sphinxfortran_ng

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: pypi-publish.yml
